[package]
name = "opencv_test"
version = "0.1.0"
authors = ["tringuyen53 <nguyenduongtri0503@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
ffmpeg-next = "4.4.0"
opencv = {version = "*", features = ["clang-runtime"]}
tokio = { version = "*", features = ["full"]}