[package]
name = "opencv_test"
version = "0.1.0"
authors = ["tringuyen53 <nguyenduongtri0503@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.4"
bastion = { git = "https://github.com/bastion-rs/bastion.git", branch = "master" }
# ffmpeg-next = "4.4.0"
# opencv = {version = "*", features = ["clang-runtime"]}
tokio = { version = "*", features = ["full"]}
gstreamer = "*"
derive_more = "*"
anyhow = "*"
# glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gstreamer-video = "*"
gstreamer-app = "*"
byte-slice-cast = "1"
nats = {git = "https://github.com/nats-io/nats.rs", branch="main"}
async-std = "*"
# ffav = {git = "https://github.com/vaxpl/ffav-rs.git", branch = "master"}
# ffav = "*"
webrtc-media = "*"
bytes = "*"
rtp = "*"
webrtc-util = "*"
job_scheduler = "1.2.1"
chrono = "*"

# [dependencies.ffav]
# git = "https://github.com/vaxpl/ffav-rs.git"
# branch = "master"
# default-features = false
# features = ["ffmpeg42", "codec", "format"]